Deploy responsive and mobile changes

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 </head>
 <body>
     <img class="mw-100" src="/images/home-header-1.png">
-    <h1 class="heading-primary text-center mt-3">Janine & Mitchell</h1>
-    <h1 class="text-center">July 8, 2023</h2>
+    <div class="text-center">
+        <h1 class="heading-primary mt-3">Janine & Mitchell</h1>
+        <h1>July 8, 2023</h2>
+    </div>
     <nav>
         <div class="nav nav-tabs pt-0" id="nav-tab" role="tablist">
             <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
@@ -35,7 +37,7 @@
     <div class="tab-content">
         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
             <!--<div class="jumbotron home-page-hero has-image"></div>-->
-            <img class="d-block mx-auto" src="/images/banner.jpg" width=1200>
+            <img class="d-block mx-auto img-fluid" src="/images/banner.jpg" width=1200>
             <h2 class="heading-secondary text-center mt-3">Our Story</h2>
             <div class="timeline">
                 <div class="timeline-container left reveal">
@@ -76,13 +78,14 @@
                 <br>
                 <div class="row">
                     <div class="col-1"></div>
-                    <div class="col-5">
+                    <div class="col-lg-5 col-md-12">
                         <img class="img-fluid" src="/images/craven-farm-2.jpg">
                         <h3>Wedding Ceremony + Reception</h3>
-                        <h4>Craven Farm<br>13817 Short School Rd<br>Snohomish, WA 98290</p>
+                        <h4>Craven Farm<br>13817 Short School Rd<br>Snohomish, WA 98290</p></h4>
+                        <a href="https://www.google.com/maps/dir//craven+farm+google+map/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x549aa806e20c7b4d:0x1c51c954ea3f5599?sa=X&ved=2ahUKEwjg6s28iub5AhVVJX0KHbw7A98Q9Rd6BAhvEAU">Link to Maps</a>
                     </div>
                     <div class="col-5">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10705.387196100939!2d-122.0751266!3d47.8716125!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1c51c954ea3f5599!2sCraven%20Farm!5e0!3m2!1sen!2sus!4v1652152180307!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe class="d-none d-lg-block" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10705.387196100939!2d-122.0751266!3d47.8716125!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1c51c954ea3f5599!2sCraven%20Farm!5e0!3m2!1sen!2sus!4v1652152180307!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="col-1"></div>
                 </div>
@@ -139,77 +142,65 @@
                 <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
                 <div class="container">
                     <div class="row reveal">
-                        <div class="col-1"></div>
-                        <div class="col-4">
+                        <div class="col-lg-5">
                             <img class="img-fluid rounded-circle" src="images/wedding-party-tab/jessy.jpg">
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-7">
                             <h1>Jessy Hosken</h1>
                             <h2>Maid of Honor</h2>
                             <p>Jessy is my longtime – and by longtime, I mean about 20 years – friend from elementary school. Even though we weren’t always in the same class, we spent our recesses together, played on the same soccer team, and had numerous play dates and sleepovers throughout the years. We stayed close friends during junior high and high school and despite us going our separate ways in college, found ways to remain best friends. She is the one who has been with me almost since day one, and someone who I can always depend on to be there for me.</p>
                         </div>
-                        <div class="col-1"></div>
                     </div>
                     <div class="row reveal">
-                        <div class="col-1"></div>
-                        <div class="col-4">
+                        <div class="col-lg-5">
                             <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/angelita.jpg">
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-7">
                             <h1>Angelita Hernandez</h1>
                             <h2>Bridesmaid</h2>
                             <p>I met Angelita at the end of 8th grade along with Jonathan. Her bubbly personality and sense of humor made her - and still makes her - easy to get along with and fun to be around. She is the one responsible for dragging me into the world of K-pop in high school, which consumed my life for the next so many years. Now, she is my talented crafting and baking buddy who can literally make anything. I’m proud to call her one of my best friends and my bridesmaid!</p>
                         </div>
-                        <div class="col-1"></div>
                     </div>
                     <div class="row reveal">
-                        <div class="col-1"></div>
-                        <div class="col-4">
+                        <div class="col-lg-5">
                             <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/johnathan.jpg">
                         </div>
-                        <div class="col-6">
+                        <div class="col-lg-7">
                             <h1>Jonathan Ieng</h1>
                             <h2>Bridesman</h2>
                             <p>Jonathan and I met towards the end of 8th grade in junior high school, although we were, and continued to be “’I’ buddies,” as we were always next to each other whenever we lined up alphabetically by last name. During high school and college, we kept in touch and now he’s the guy who brings all the greatest board games to our hang out sessions. Although he may not be a traditional bridesmaid, I know he’ll be the best and most reliable bridesman. </p>
                         </div>
-                        <div class="col-1"></div>
                     </div>
                     <hr>
                     <div class="row reveal">
-                        <div class="col-1"></div>
-                        <div class="col-6">
+                        <div class="col-lg-7 order-last order-lg-first">
                             <h1>Matthew Francisco</h1>
                             <h2>Best Man</h2>
                             <p>Matt and I grew up as your typical brother tag team duo! Always hanging out together, always playing games together, always getting into trouble together... I haven't always been the nicest bigger brother, but even as we grew up and our personalities matured into who were are now, we're still there for each other (and we still play video games). I know Matt will support me through thick and thin — just as he's done when we were kids, as well as now, as my best man. </p>
                         </div>
-                        <div class="col-4">
+                        <div class="col-lg-5 order-first order-lg-last">
                             <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/matt.jpg">
                         </div>
-                        <div class="col-1"></div>
                     </div>
                     <div class="row reveal">
-                        <div class="col-1"></div>
-                        <div class="col-6">
+                        <div class="col-lg-7 order-last order-lg-first">
                             <h1>Keegan Griffee</h1>
                             <h2>Groomsman</h2>
                             <p>I first met Keegan in middle school, but I only knew him as the "french horn boy". Ironically, he knew <em>me</em> as the single "flute boy" of the band. But our friendship only really flourished in high school, where we both were a part of the tennis team, a number of classes, <em>some</em> study sessions, but mostly playing League of Legends every night after school. As we went to UW, we were freshman roommates, then housemates, where we made great memories. I'm so glad he's one of my groomsmen!</p>
                         </div>
-                        <div class="col-4">
+                        <div class="col-lg-5 order-first order-lg-last">
                             <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/keegan.jpg">
                         </div>
-                        <div class="col-1"></div>
                     </div>
                     <div class="row reveal">
-                        <div class="col-1"></div>
-                        <div class="col-6">
+                        <div class="col-lg-7 order-last order-lg-first">
                             <h1>Neal Brown</h1>
                             <h2>Groomsman</h2>
                             <p>Neal went to my high school where we initially met through playing Magic the Gathering (MTG)  and video games together. We quickly became friends starting up at UW, being the other housemate with Keegan and I on our renovated basement floor of our college house. We've made countless memories over the years through university, his own wedding, and continued game nights. Neal's been a down-to-earth yet comedic friend, and I always know he's got my back. As I like to say, out of all the Neal Brown's of the world, he's the Neal Browniest!</p>
                         </div>
-                        <div class="col-4">
+                        <div class="col-lg-5 order-first order-lg-last">
                             <img class="img-fluid rounded-circle" src="/images/wedding-party-tab/neal.jpg">
                         </div>
-                        <div class="col-1"></div>
                     </div>
                 </div>
             </div>
@@ -219,7 +210,7 @@
                 <h1 class="heading-secondary">Photos</h1>
                 <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
                 <div class="row">
-                    <div class="col">
+                    <div class="col-md-4">
                         <a data-fslightbox href="/images/images-tab/1.JPG">
                             <img class="img-fluid my-4" src="/images/images-tab/1.JPG">
                         </a>
@@ -233,7 +224,7 @@
                             <img class="img-fluid my-4" src="/images/images-tab/10.JPG">
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="col-md-4">
                         <a data-fslightbox href="/images/images-tab/2.JPG">
                             <img class="img-fluid my-4" src="/images/images-tab/2.JPG">
                         </a>
@@ -250,7 +241,7 @@
                             <img class="img-fluid my-4" src="/images/images-tab/13.jpg">
                         </a>
                     </div>
-                    <div class="col">
+                    <div class="col-md-4">
                         <a data-fslightbox href="/images/images-tab/3.jpg">
                             <img class="img-fluid my-4" src="/images/images-tab/3.jpg">
                         </a>
@@ -274,52 +265,52 @@
                 <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
                 <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right"><span>When should I RSVP by?</span></div>
-                    <div class="col-4">Please RSVP no later than 6/3/2023. If you are unable to respond by then we will assume you can't make it.</div>
+                    <div class="col-4 border-right question"><span>When should I RSVP by?</span></div>
+                    <div class="col-4 answer">Please RSVP no later than 6/3/2023. If you are unable to respond by then we will assume you can't make it.</div>
                     <div class="col-2"></div>
                 </div>
                  <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right"><span>Are you registered? Where?</span></div>
-                    <div class="col-4">Check out the registry tab on this wedding website! Otherwise, feel free to look up our registries on Amazon under either of our names.</div>
+                    <div class="col-4 border-right question"><span>Are you registered? Where?</span></div>
+                    <div class="col-4 answer">Check out the registry tab on this wedding website! Otherwise, feel free to look up our registries on Amazon under either of our names.</div>
                     <div class="col-2"></div>
                 </div>
                  <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right"><span>Is there a dress code?</span></div>
-                    <div class="col-4">
+                    <div class="col-4 border-right question"><span>Is there a dress code?</span></div>
+                    <div class="col-4 answer">
                     We'd love our guests to sport comfortable semi-formal attire. Ladies can wear a nice dress, and the men can wear dress shirt/pants (tie optional). Ladies, the venue does have grass and other unstable terrain, so stiletto heels may not be the best choice of footwear.
                     </div>
                     <div class="col-2"></div>
                 </div>
                  <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right"><span>Are kids welcome?</span></div>
-                    <div class="col-4">If they are included on the invitation, then yes, of course! Please note that our wedding can only accommodate kids from our families, so thank you for understanding. Also, there is a considerable amount of space to play on grass and wood chips, so bringing a change of clothes for them might be advisable. </div>
+                    <div class="col-4 border-right question"><span>Are kids welcome?</span></div>
+                    <div class="col-4 answer">If they are included on the invitation, then of course! Only kids from our families can be accommodated, so thank you for understanding. Also, there is a considerable amount of space to play on grass and wood chips, so bringing a change of clothes for them might be advisable. </div>
                     <div class="col-2"></div>
                 </div>
                  <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right"><span>Do I need to wear a mask?</span></div>
-                    <div class="col-4">You do not need to wear one, but you may if you wish. </div>
+                    <div class="col-4 border-right question"><span>Do I need to wear a mask?</span></div>
+                    <div class="col-4 answer">You do not need to wear one, but you may if you wish. </div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right"><span>Is there parking for the ceremony and reception?</span></div>
-                    <div class="col-4">Yes, there is plenty of parking on site at Craven Farm.</div>
+                    <div class="col-4 border-right question"><span>Is there parking for the ceremony and reception?</span></div>
+                    <div class="col-4 answer">Yes, there is plenty of parking on site at Craven Farm.</div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right"><span>What time should I arrive at the ceremony?</span></div>
-                    <div class="col-4">The ceremony begins at 4:30 p.m. Please arrive by 4:15pm to ensure you get a good seat!</div>
+                    <div class="col-4 border-right question"><span>What time should I arrive at the ceremony?</span></div>
+                    <div class="col-4 answer">The ceremony begins at 4:30 p.m. Please arrive by 4:15pm to ensure you get a good seat!</div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row">
                     <div class="col-2"></div>
-                    <div class="col-4 border-right"><span>I have a dietary restriction/food preference. Can you accommodate me?</span></div>
-                    <div class="col-4">Please make sure to indicate your dietary needs when you RSVP and we will do our best to work with our caterer to make sure there is something available for you at the reception.</div>
+                    <div class="col-4 border-right question"><span>I have a dietary restriction/food preference. Can you accommodate me?</span></div>
+                    <div class="col-4 answer">Please make sure to indicate your dietary needs when you RSVP and we will do our best to work with our caterer to make sure there is something available for you at the reception.</div>
                     <div class="col-2"></div>
                 </div>
             </div>
