--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <div class="row">
                     <div class="col-2"></div>
                     <div class="col-4 border-right question"><span>What time should I arrive at the ceremony?</span></div>
-                    <div class="col-4 answer">The ceremony begins at 4:30 p.m. Please arrive by 4:15pm to ensure you get a good seat!</div>
+                    <div class="col-4 answer">The ceremony begins at 4:00 p.m. Please arrive by 3:45 p.m. to ensure you get a good seat!</div>
                     <div class="col-2"></div>
                 </div>
                 <div class="row">
