--- a/index.html
+++ b/index.html
@@ -257,7 +257,63 @@
                         </a>
                     </div>
                 </div>
-
+                <hr>s
+                <div class="row">
+                    <div class="col-md-4">
+                        <a data-fslightbox href="/images/images-tab/selfies/1.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/1.JPG">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/9.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/9.JPG">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/7.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/7.JPG">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/10.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/10.JPG">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/14.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/14.JPG">
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a data-fslightbox href="/images/images-tab/selfies/2.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/2.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/5.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/5.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/8.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/8.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/11.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/11.JPG">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/13.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/13.JPG">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/16.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/16.JPG">
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a data-fslightbox href="/images/images-tab/selfies/3.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/3.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/6.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/6.JPG">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/4.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/4.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/12.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/12.JPG">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/selfies/15.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/15.JPG">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="tab-pane fade" id="nav-questions" role="tabpanel" aria-labelledby="nav-questions-tab">
