Add registry link

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
                 <p>We're still putting together our registry list, but we appreciate you checking in!<br>Please stay tuned for more registry details. Thank you!</p>
                 <div class="row">
-                    <div class="col-sm-6 col-md-4 col-xl-3 col-xxxl-2">
-                        <a href="/" class="d-flex align-self-center justify-content-center" label="Amazon registry" aria-label="Amazon registry">
+                    <div class="mx-auto col-sm-6 col-md-4 col-xl-3 col-xxxl-2">
+                        <a href="https://www.amazon.com/wedding/mitchell-francisco-janine-ikeda-snohomish-july-2023/registry/3LX4O1NN9QFHV" target="_blank" class="d-flex align-self-center justify-content-center" label="Amazon registry" aria-label="Amazon registry">
                             <div class="align-self-center ms-2">
                                 <img class="mw-100 rounded full-logo" src="/images/amazon-registry.png" alt="Amazon registry">
                             </div>
