fix stupid img caps sensitive

--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
                         <a data-fslightbox href="/images/images-tab/selfies/13.JPG">
                             <img class="img-fluid my-4" src="/images/images-tab/selfies/13.JPG">
                         </a>
-                        <a data-fslightbox href="/images/images-tab/selfies/16.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/16.JPG">
+                        <a data-fslightbox href="/images/images-tab/selfies/16.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/16.jpg">
                         </a>
                     </div>
                     <div class="col-md-4">
@@ -309,8 +309,8 @@
                         <a data-fslightbox href="/images/images-tab/selfies/12.JPG">
                             <img class="img-fluid my-4" src="/images/images-tab/selfies/12.JPG">
                         </a>
-                        <a data-fslightbox href="/images/images-tab/selfies/15.JPG">
-                            <img class="img-fluid my-4" src="/images/images-tab/selfies/15.JPG">
+                        <a data-fslightbox href="/images/images-tab/selfies/15.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/selfies/15.jpg">
                         </a>
                     </div>
                 </div>
