--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <div class="container text-center">
                 <h1 class="heading-secondary">RSVP</h1>
                 <img class="flower-boquet" src="/images/flower-boquet-transparent.png"> 
-                <p>You'll be able to RSVP once formal invitations have been sent out. Thanks for checking in!</p>
+                <p>You'll be able to RSVP on this page once formal invitations have been sent out. Thanks for checking in!</p>
                 <!--
                 <p>If you're responding for you and your family or a guest,<br>you'll be able to RSVP for your entire group.</p>-->
                 <div class="alert alert-info d-none" role="alert"></div>
