--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <p>On a gorgeous and sunny February afternoon in Magnuson Park, Mitchell found a quiet place on the water to pop the question, and of course, Janine said yes. The date ended with a classic: a trip to Tofu House. After almost seven years of dating and over a year of engagement, the two will spend their lifetime together on July 8th, 2023.</p>
                         </div>
                         <div class="back">
-                            <img class="img-fluid" src="/images/home-tab/engaged.JPG">
+                            <img class="img-fluid" src="/images/home-tab/engaged.jpg">
                         </div>
                     </div>
                 </div>
